Added function that logs a movie's data when the user types in the movie name and clicks on the search button

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Classy Movies</title>
   </head>
   <body>
     <header>
@@ -11,17 +11,19 @@
     </header>
 
     <form>
-     
       <ul>
-        <li> Romance<input id="id-romanceCk" type="checkBox" /></li>
-        <li> Action<input id="id-actionCk" type="checkBox" /></li>
-        <li> Comedy<input id="id-comedyCk" type="checkBox" /></li>
-        <li> Drama<input id="id-dramaCk" type="checkBox" /></li>
-        <li> All<input id="id-allCk" type="checkBox" /></li>
-        <li> Other<input id="id-allCk" type="checkBox" /></li>
+        <li>Romance<input id="id-romanceCk" type="checkBox" /></li>
+        <li>Action<input id="id-actionCk" type="checkBox" /></li>
+        <li>Comedy<input id="id-comedyCk" type="checkBox" /></li>
+        <li>Drama<input id="id-dramaCk" type="checkBox" /></li>
+        <li>All Genres<input id="id-allgenresCk" type="checkBox" /></li>
+        <li>Other<input id="id-otherCk" type="checkBox" /></li>
       </ul>
-      <input id="id-movieinput" />
+      <input id="id-movieinput" placeholder="Search movie"/>
       <input id="id-searchBtn" type="button" value="search" />
     </form>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
