--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     </section>
 
     <!-- Image of movie 1-->
-    <div class="col-sm-4">
-      <h3 style="text-align: center">movie1</h3>
+    <div class="col-sm-4" style="text-align: center">
+      <h3>movie1</h3>
       <a href="default.asp">
         <img
           src="assets/images/gif-explosion-57.gif"
@@ -97,8 +97,8 @@
     </div>
 
     <!-- Image of movie 2-->
-    <div class="col-sm-4">
-      <h3 style="text-align: center">movie2</h3>
+    <div class="col-sm-4" style="text-align: center">
+      <h3>movie2</h3>
       <a href="default.asp">
         <img
           src="assets/images/giphy-cat.gif"
