--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 
 <body>
-
+    <!--di class = logo-container to hold title and logo img-->
     <div class="logo-container">
         <a class="logo no-snap">
             <h1 class="logo-img">CLASSY Movies</h1>
         </a>
     </div>
+
+    <!--a wrap to hold subtitle, movie search for title and options-->
 
     <div container="#cmn-wrap">
         <div class="content-container">
@@ -28,7 +30,11 @@
                             <div class="text-filter">
                                 <input type="text" placeholder="filter by title">
                                 <a class="clear" style="display: none;">x</a>
-                                <input id="id-searchBtn" type="button" value="search" />
+                                <input id="id-searchBtn" type="button" value="search">
+                            </div>
+
+                        </div>
+
             </section>
 
         </div>
