Deleted welcome page duplicate

--- a/assets/welcome.html
+++ b/assets/welcome.html
@@ -45,6 +45,6 @@
       <p class="forrestGump">- Forrest Gump.</p>
     </div>
 
-    <script src="assets/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
