--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         To begin, simply click on the button below. ENJOY!
       </p>
 
-      <!-- Play button. Still have to add eventlistener to the play button -->
+      <!-- Play button -->
       <button id="play-button" type="button" class="btn btn-primary btn-lg">
         <i
           id="play-button"
