--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             style="display: list-item; list-style-type: none"
           >
             <input type="checkbox" name="genre" id="#gnere4" value="romance" />
-            <label for="romance">ROMANCE</label>
+            <label for="#gnere4">ROMANCE</label>
           </li>
 
           <li
@@ -77,7 +77,7 @@
             style="display: list-item; list-style-type: none"
           >
             <input type="checkbox" name="genre" id="#gnere1" value="action" />
-            <label for="action">ACTION</label>
+            <label for="#gnere1">ACTION</label>
           </li>
 
           <li
@@ -86,7 +86,7 @@
             style="display: list-item; list-style-type: none"
           >
             <input type="checkbox" name="genre" id="#gnere2" value="comedy" />
-            <label for="comedy">COMEDY</label>
+            <label for="#gnere2">COMEDY</label>
           </li>
 
           <li
@@ -95,7 +95,7 @@
             style="display: list-item; list-style-type: none"
           >
             <input type="checkbox" name="genre" id="#gnere5" value="drama" />
-            <label for="drama">DRAMA</label>
+            <label for="#gnere5">DRAMA</label>
           </li>
 
           <li
@@ -104,7 +104,7 @@
             style="display: list-item; list-style-type: none"
           >
             <input type="checkbox" name="genre" id="#gnere3" value="family" />
-            <label for="comedy">FAMILY</label>
+            <label for="#gnere3">FAMILY</label>
           </li>
         </ul>
       </form>
@@ -126,7 +126,7 @@
                   id="#gnere6"
                   value="other"
                 />
-                <label for="other">OTHER</label>
+                <label for="#gnere6">OTHER</label>
               </li>
             </ul>
             <div id="id-searchdiv">
@@ -167,7 +167,6 @@
         <p
           style="text-align: center"
           id="id-movieName"
-          style="text-align: center"
         ></p>
       </div>
     </main>
