--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
       <!-- Image of movie 1-->
       <div class="col-sm-4" style="text-align: center">
-        <h3>movie1</h3>
+        <h3>MOVIE1</h3>
         <a href="default.asp">
           <img
             src="assets/images/gif-explosion-57.gif"
@@ -152,7 +152,7 @@
 
       <!-- Image of movie 2-->
       <div class="col-sm-4" style="text-align: center">
-        <h3>movie2</h3>
+        <h3>MOVIE2</h3>
         <a href="default.asp">
           <img
             src="assets/images/giphy-cat.gif"
