some little changes

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           style="text-align: center"
         ></p>
       </div>
-    </main>
+    </main><br><br><br>
     <script src="assets/script.js"></script>
   </body>
 </html>
