--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <!-- Form-list of movie genres-->
 
       <form class="options">
-        <ul id="id-ul">
+        <ul class="id-ul">
           <li
             class="genre"
             data-text-filter="romance"
