--- a/index.html
+++ b/index.html
@@ -117,6 +117,6 @@
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="assets/trailer.js"></script>
+    <script src="assets/script.js"></script>
   </body>
 </html>
