adding a title to movie search

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       <!-- Form-list of movie genres-->
 
       <form class="movie-genres-container">
+        <h5>Search by:</h5>
         <ul>
           <li class="genre" data-text-filter="action">
             <input type="checkbox" name="genre" id="action" value="action" />
@@ -81,7 +82,7 @@
 
           <li class="byTitle" data-text-filter="search-by-title">
             <input type="checkbox" name="other" id="search-by-title" value="byTitle" />
-            <label for="search-by-title">SEARCH BY TITLE</label>
+            <label for="search-by-title">MOVIE TITLE</label>
           </li>
         </ul>
       </form>
