attempted to fix checkboxes

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
       </div>
 
       <div>
-        <p>Most recent searches:
+        <p>Most recent searches:</p>
           <div id="recents" style="color: white; text-align: center"> </div>
-        </p>
+        
       </div>
       
   
@@ -105,7 +105,7 @@
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="assets/trailer.js"></script>
+    <script src="assets/script.js"></script>
   </body>
 
 </html>
