--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </li>
 
           <li class="byTitle" data-text-filter="search-by-title">
-            <input type="checkbox" name="other" id="search-by-title" value="byTitle" />
+            <input type="checkbox" name="byTitle" id="search-by-title" value="byTitle" />
             <label for="search-by-title">SEARCH BY TITLE</label>
           </li>
         </ul>
