edited placeholder Movie Title

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
           <li class="byTitle" data-text-filter="search-by-title">
             <input type="checkbox" name="byTitle" id="search-by-title" value="byTitle" />
-            <label for="search-by-title">SEARCH BY TITLE</label>
+            <label for="search-by-title">MOVIE TITLE</label>
           </li>
         </ul>
       </form>
