--- a/index.html
+++ b/index.html
@@ -16,7 +16,31 @@
 </head>
 
 <body>
-     <!-- ==== MOVIE SEARCH PAGE STARTS HERE ==== -->
+  <!-- ==== WELCOME CONTAINER PAGE STARTS HERE ==== -->
+  <div class="welcome-container">
+    <h3 class="welcomeHtag">WELCOME TO</h3>
+    <h1 class="welcomeHtag">CLASSY MOVIES</h1>
+
+    <p class="welcome-message">
+      If you're a lover of the good old classic movies, then this is the
+      website you've been looking for! <br />
+      To begin, simply click on the button below. ENJOY!
+    </p>
+
+    <!-- Play button -->
+    <button id="play-button" type="button" class="btn btn-primary btn-lg">
+      <i class="fa fa-play" style="font-size: 50px; color: black"></i>
+    </button>
+
+    <!-- Forrest Gump quote -->
+    <p class="quote">
+      “Life is like a box of chocolates. You never know what you're gonna
+      get.”
+    </p>
+    <p class="forrestGump">- Forrest Gump.</p>
+  </div>
+
+    <!-- ==== MOVIE SEARCH PAGE STARTS HERE ==== -->
 
     <main id="main-page" class="hide">
       <!-- Header -->
